--- a/Practicas/Evidencias/Evidencia 4/estilos.css
+++ b/Practicas/Evidencias/Evidencia 4/estilos.css
@@ -1,4 +1,4 @@
-#galeria .col-lg-4 {
+#galeria .col-lg-4 col-md-6 col-sm-12 {
     margin: 0 !important;
     padding: 25px;
 }
@@ -9,5 +9,5 @@
 }
 
 #galeria img:hover {
-    border: 5px solid #f7f7f7
+    border: 5px solid white
 }
