--- a/Practicas/Evidencias/Evidencia 4/estilos.css
+++ b/Practicas/Evidencias/Evidencia 4/estilos.css
@@ -1,11 +1,11 @@
-#galeria .col-lg-4 col-md-6 col-sm-12 {
+#galeria .col-lg-4 {
     margin: 0 !important;
     padding: 25px;
 }
 
 #galeria img {
     width: 100%;
-    height: 300px;
+    height: 400px;
 }
 
 #galeria img:hover {
